Simplify merge with upstream

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -56,8 +56,8 @@ jobs:
           set -x
           echo $(git log -1 --pretty=%B) | tee gitlog.txt
           echo "gitlog.txt = $(cat gitlog.txt)"
-          echo ${GITHUB_REF//*pull\//} | tee merge.txt
-          if [ "$GITHUB_REF_NAME" != "main" ] && [[ $(cat merge.txt) != "" ]]; then
+          echo $GITHUB_REF_NAME | tee merge.txt
+          if [ "$GITHUB_REF_NAME" != "main" ]; then
               echo "Merging $(cat merge.txt)";
               git pull --ff-only upstream "refs/pull/$(cat merge.txt)";
           fi
