Add data caching conditional

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -91,13 +91,14 @@ jobs:
             echo "true" | tee restore.txt;
           fi
       - name: Get cache key
+        id: cache-key
         run: |
           if [[ $(cat restore.txt) == "true" ]]; then
               date +%U > week_num;
-          else
-              echo "missing" > week_num;
+              echo "restore=true" >> $GITHUB_OUTPUT
           fi
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~48 MB
         with:
@@ -114,6 +115,7 @@ jobs:
            nilearn_data/yeo_2011
           key: v1-small-cache-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~45 MB
         with:
@@ -121,6 +123,7 @@ jobs:
            nilearn_data/adhd
           key: v1-adhd-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~32 MB
         with:
@@ -128,6 +131,7 @@ jobs:
            nilearn_data/allen_rsn_2011
           key: v1-allen_rsn_2011-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~66 MB
         with:
@@ -135,6 +139,7 @@ jobs:
            nilearn_data/brainomics_localizer
           key: v1-brainomics_localizer-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~373 MB
         with:
@@ -142,6 +147,7 @@ jobs:
            nilearn_data/development_fmri
           key: v1-development_fmri-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~832 MB
         with:
@@ -149,6 +155,7 @@ jobs:
            nilearn_data/ds000030
           key: v1-ds000030-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~82 MB
         with:
@@ -156,6 +163,7 @@ jobs:
            nilearn_data/fiac_nilearn.glm
           key: v1-fiac_nilearn.glm-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~750 MB
         with:
@@ -163,6 +171,7 @@ jobs:
            nilearn_data/fMRI-language-localizer-demo-dataset
           key: v1-fMRI-language-localizer-demo-dataset-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~30 MB
         with:
@@ -170,6 +179,7 @@ jobs:
            nilearn_data/fsl
           key: v1-fsl-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~302 MB
         with:
@@ -177,6 +187,7 @@ jobs:
            nilearn_data/haxby2001
           key: v1-haxby2001-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~63 MB
         with:
@@ -184,6 +195,7 @@ jobs:
            nilearn_data/icbm152_2009
           key: v1-icbm152_2009-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~105 MB
         with:
@@ -191,6 +203,7 @@ jobs:
            nilearn_data/jimura_poldrack_2012_zmaps
           key: v1-jimura_poldrack_2012_zmaps-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~35 MB
         with:
@@ -198,6 +211,7 @@ jobs:
            nilearn_data/localizer_first_level
           key: v1-localizer_first_level-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~181 MB
         with:
@@ -205,6 +219,7 @@ jobs:
            nilearn_data/miyawaki2008
           key: v1-miyawaki2008-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~85 MB
         with:
@@ -212,6 +227,7 @@ jobs:
            nilearn_data/nki_enhanced_surface
           key: v1-nki_enhanced_surface-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~913 MB
         with:
@@ -219,6 +235,7 @@ jobs:
            nilearn_data/oasis1
           key: v1-oasis1-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~171 MB
         with:
@@ -226,6 +243,7 @@ jobs:
            nilearn_data/smith_2009
           key: v1-smith_2009-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~230 MB
         with:
@@ -233,6 +251,7 @@ jobs:
            nilearn_data/spm_auditory
           key: v1-spm_auditory-${{ hashFiles('week_num') }}
       - name: Data caching
+        if: steps.cache-key.outputs.restore == 'true'
         uses: actions/cache@v3
         # ~227 MB
         with:
@@ -275,5 +294,6 @@ jobs:
       - name: Note about build
         run: |
           if [[ "$(cat build.txt)" != "html-strict" ]]; then
-              echo "Partial build : Data is still cached";
+              echo "Partial build : Data is downloaded and cached only for first build of the week";
+              echo "Data is never cached if [force download] commit tag is used";
           fi
