--- a/setup.cfg
+++ b/setup.cfg
@@ -71,7 +71,7 @@ dev =
 # E402: module level import not at top of file
 # W503: line break before binary operator
 # W504: line break after binary operator
-ignore=E402, W503, W504. W605
+ignore=E402, W503, W504, W605
 
 [tool:pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
