--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,7 +27,7 @@ jobs:
     needs: check_skip
     if: ${{ needs.check_skip.outputs.skip == 'false' }}
     runs-on: "ubuntu-20.04"
-    name: Python 3.6, minimal requirements without Matplotlib
+    name: Python 3.7, minimal requirements without Matplotlib
     defaults:
       run:
         shell: bash
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.6"
+          python-version: "3.7"
         name: 'Setup python'
       - shell: bash -l {0}
         name: 'Display Python version'
@@ -59,7 +59,7 @@ jobs:
     needs: check_skip
     if: ${{ needs.check_skip.outputs.skip == 'false' }}
     runs-on: "ubuntu-20.04"
-    name: Python 3.6, minimal requirements with Matplotlib
+    name: Python 3.7, minimal requirements with Matplotlib
     defaults:
       run:
         shell: bash
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
-          python-version: "3.6"
+          python-version: "3.7"
         name: 'Setup python'
       - shell: bash -l {0}
         name: 'Display Python version'
@@ -93,7 +93,7 @@ jobs:
         fail-fast: false
         matrix:
             os: ["ubuntu-latest", "macos-latest"]
-            python-version: ["3.7", "3.8", "3.9", "3.10"]
+            python-version: ["3.8", "3.9", "3.10"]
     name: ${{ matrix.os }} with Python ${{ matrix.python-version }} and latest package versions
     defaults:
       run:
