--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -25,7 +25,7 @@ jobs:
 
             - [ ] Code is PEP8-compliant.
 
-            - [ ] Changelog or what's new entry
+            - [ ] Changelog or what's new entry in "doc/changes/latest.rst"
 
             - [ ] (Bug fixes) There is at least one test that would fail
             under the original bug conditions.
