[DOC]  Add "add changelog entry" to auto-comment PR template #3218  (#3446)
* Add changelog/whats new line to PR template

* Add doc location

* Add detail to Contributing.rst along with example

* Add code bloack and entry to names.rst

* Addition of latest.rst entry and fix to spelling in CONTRIBUTING.rst

* Update doc/changes/latest.rst

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

--- a/.github/workflows/auto-comment.yml
+++ b/.github/workflows/auto-comment.yml
@@ -25,6 +25,8 @@ jobs:
 
             - [ ] Code is PEP8-compliant.
 
+            - [ ] Changelog or what's new entry in "doc/changes/latest.rst"
+
             - [ ] (Bug fixes) There is at least one test that would fail
             under the original bug conditions.
 
