upate pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 
+files: "nilearn/[decomposition|decoding]"
+
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
@@ -18,14 +20,12 @@ repos:
     rev: 22.10.0
     hooks:
       - id: black
-        files: tools/schemacode
         args: [--verbose]
 
   - repo: https://github.com/pyCQA/flake8
     rev: 5.0.4
     hooks:
       - id: flake8
-        files: tools/schemacode
         args: [--config=setup.cfg]
 
   - repo: https://github.com/codespell-project/codespell
@@ -33,5 +33,3 @@ repos:
     hooks:
       - id: codespell
         args: [--config=setup.cfg]
-
-exclude: "tools/schemacode/bidsschematools/tests/data/broken_dataset_description.json"
