--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ dev =
 # W503: line break before binary operator
 # W504: line break after binary operator
 ignore=E402, W503, W504, W605
+max-line-length = 91
 
 [tool:pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
