--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,7 @@ repos:
     rev: 5.0.4
     hooks:
       - id: flake8
-        args: [--config=setup.cfg]
+        args: [--config=setup.cfg, --verbose]
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.2
