--- a/.github/workflows/pep8.yml
+++ b/.github/workflows/pep8.yml
@@ -1,4 +1,4 @@
-name: 'PEP8'
+name: "PEP8"
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - "main"
   pull_request:
     branches:
-      - '*'
+      - "*"
 
 jobs:
   pep8:
@@ -20,11 +20,14 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-        name: 'Setup python'
+        name: "Setup python"
       - shell: bash {0}
         run: |
-            python -m pip install --upgrade pip flake8
-        name: 'Install Flake8'
+          python -m pip install --upgrade pip flake8
+        name: "Install Flake8"
       - shell: bash {0}
         run: ./build_tools/flake8_diff.sh
-        name: 'Run Flake8 diff'
+        name: "Run Flake8 diff"
+      - shell: bash {0}
+        run: flake8 --config=setup.cfg --verbose "nilearn/decomposition"
+        name: "Run Flake8 on whole file"
