--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -1,4 +1,4 @@
-name: "PEP8"
+name: "flake8"
 
 on:
   push:
@@ -10,21 +10,26 @@ on:
 
 jobs:
   pep8:
-    runs-on: ubuntu-latest
     name: PEP8 checks
+    runs-on: ubuntu-latest
+
     defaults:
       run:
         shell: bash
+
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+
+      - name: "Setup python"
+        uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-        name: "Setup python"
-      - shell: bash {0}
+
+      - name: "Install Flake8"
+        shell: bash {0}
         run: |
           python -m pip install --upgrade pip flake8
-        name: "Install Flake8"
-      - shell: bash {0}
-        run: ./build_tools/flake8_diff.sh
-        name: "Run Flake8 diff"
+
+      - name: "Run Flake8 on whole file"
+        shell: bash {0}
+        run: flake8 --config=setup.cfg --verbose "nilearn/decomposition"
