add black config and adapt flake8 config

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,7 +72,8 @@ dev =
 # W503: line break before binary operator
 # W504: line break after binary operator
 ignore=E402, W503, W504, W605
-max-line-length = 91
+max-line-length = 88
+extend-ignore = E203
 
 [tool:pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
