--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,9 @@ dev =
 # W504: line break after binary operator
 ignore=E402, W503, W504, W605
 max-line-length = 91
+# E203: whitespace before ':'
+# for compatibility with black
+# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
 extend-ignore = E203
 
 [tool:pytest]
