--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - "*"
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   pep8:
     name: PEP8 checks
