--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -29,4 +29,4 @@ jobs:
           python -m pip install --upgrade pip black
 
       - name: "Run Black on diff"
-        run: black --diff --color --check --config=pyproject.toml
+        run: black --diff --color --check --config=pyproject.toml .
