run black on entire files

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,9 @@ doc =
 	%(plotly)s
 	coverage
 	flake8
+	black
 	furo
- 	memory_profiler  # measuring memory during docs building
+	memory_profiler  # measuring memory during docs building
 	mkl
 	myst-parser
 	numpydoc
