--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -28,5 +28,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip black
 
-      - name: "Run Black on diff"
-        run: black --diff --check .
+      - name: "Run Black"
+        run: black --check .
