--- a/setup.cfg
+++ b/setup.cfg
@@ -30,8 +30,9 @@ doc =
 	%(plotly)s
 	coverage
 	flake8
+	black
 	furo
- 	memory_profiler  # measuring memory during docs building
+	memory_profiler  # measuring memory during docs building
 	mkl
 	myst-parser
 	numpydoc
@@ -72,6 +73,11 @@ dev =
 # W503: line break before binary operator
 # W504: line break after binary operator
 ignore=E402, W503, W504, W605
+max-line-length = 79
+# E203: whitespace before ':'
+# for compatibility with black
+# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
+extend-ignore = E203
 
 [tool:pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
