adapt for nilearn repo

--- a/.github/workflows/update_precommit_hooks.yml
+++ b/.github/workflows/update_precommit_hooks.yml
@@ -3,11 +3,6 @@ name: Update precommit hooks
 
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-
 # Uses the cron schedule for github actions
 #
 # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows#scheduled-events
@@ -29,8 +24,10 @@ on:
 
 jobs:
   update_precommit_hooks:
+  
     # only run on upstream repo
-    if: github.repository_owner == 'Remi-Gau'
+    if: github.repository_owner == 'nilearn'
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
