--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -73,7 +73,7 @@ jobs:
         fail-fast: false
         matrix:
             os: ["ubuntu-latest", "macos-latest"]
-            python-version: ["3.8", "3.9", "3.10"]
+            python-version: ["3.8", "3.9", "3.10", "3.11"]
     name: ${{ matrix.os }} with Python ${{ matrix.python-version }} and latest package versions
     defaults:
       run:
@@ -109,7 +109,7 @@ jobs:
         fail-fast: false
         matrix:
             os: ["ubuntu-latest"]
-            python-version: ["3.10"]
+            python-version: ["3.11"]
     env:
         PIP_FLAGS: "--pre"
     name: ${{ matrix.os }} with Python ${{ matrix.python-version }} and pre-release dependencies
