--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ dev =
 	%(test)s
 
 [flake8]
+--select=D,E,F,W,C90
 # For PEP8 error codes see
 # http://pep8.readthedocs.org/en/latest/intro.html#error-codes
 # E402: module level import not at top of file
