add flake8 docstring

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ doc =
 	%(plotly)s
 	coverage
 	flake8
+	flake8-docstrings
 	black
 	furo
 	memory_profiler  # measuring memory during docs building
@@ -75,6 +76,7 @@ exclude =
     dist,
 	nilearn/externals/tempita
 --select=D,E,F,W,C90
+docstring-convention=numpy
 max-line-length = 79
 max_complexity = 43
 per-file-ignores =
