--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     hooks:
       - id: flake8
         args: [--config=setup.cfg, --verbose]
+        additional_dependencies: [flake8-docstrings]
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.2
