--- a/setup.cfg
+++ b/setup.cfg
@@ -81,15 +81,16 @@ max-line-length = 79
 max_complexity = 43
 per-file-ignores =
     # missing docstring
-	*/tests/*: D103
+	*/tests/*: D100, D103
 	*/tests/__init__.py: D104
 # For PEP8 error codes see
 # http://pep8.readthedocs.org/en/latest/intro.html#error-codes
+# D105: missing docstring in magic method
 # D107: missing docstring in __init__
 # E402: module level import not at top of file
 # W503: line break before binary operator
 # W504: line break after binary operator
-ignore=D107, E402, W503, W504, W605
+ignore=D105, D107, E402, W503, W504, W605
 # E203: whitespace before ':'
 # for compatibility with black
 # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
