fix spacing in config

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,8 +75,8 @@ exclude =
     build,
     dist,
 	nilearn/externals/tempita
---select=D,E,F,W,C90
-docstring-convention=numpy
+--select = D,E,F,W,C90
+docstring-convention = numpy
 max-line-length = 79
 max_complexity = 43
 per-file-ignores =
@@ -90,7 +90,7 @@ per-file-ignores =
 # E402: module level import not at top of file
 # W503: line break before binary operator
 # W504: line break after binary operator
-ignore=D105, D107, E402, W503, W504, W605
+ignore = D105, D107, E402, W503, W504, W605
 # E203: whitespace before ':'
 # for compatibility with black
 # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
