--- a/setup copy.cfg
+++ b/setup copy.cfg
@@ -30,6 +30,7 @@ doc =
 	%(plotly)s
 	coverage
 	flake8
+	flake8-docstrings
 	black
 	furo
 	memory_profiler  # measuring memory during docs building
