--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,12 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--profile", "black", "--filter-files"]      
+
   - repo: https://github.com/psf/black
     rev: 23.1.0
     hooks:
@@ -36,5 +42,5 @@ repos:
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
-    - id: pyupgrade
-      args: [--py36-plus]
+      - id: pyupgrade
+        args: [--py36-plus]
