[MAINT] update flake8 configuration to cover doc strings (#3534)
* update flake 8 config

* update flake8 config

* add flake8 docstring

* fix doc strings

* fix spacing in config

* silence some flake8 doc strings errors in tests and examples

* rm extra file

* remove backslash

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ doc =
 	%(plotly)s
 	coverage
 	flake8
+	flake8-docstrings
 	black
 	furo
 	memory_profiler  # measuring memory during docs building
@@ -67,13 +68,37 @@ dev =
 	%(test)s
 
 [flake8]
+exclude =
+    .git,
+    __pycache__,
+	env,
+	venv,
+    build,
+    dist,
+	nilearn/externals/tempita
+--select = D,E,F,W,C90
+docstring-convention = numpy
+max-line-length = 79
+max_complexity = 43
+per-file-ignores =
+	# For PEP8 error codes see
+	# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
+    # - docstrings rules that should not be applied to tests
+    # D100, D103, D104: missing docstring
+	# D205: 1 blank line required between summary line and description
+	# D400: first line should end with a period
+	*/tests/*: D100, D103, D104, D205, D400
+	*/*/tests/*: D100, D103, D104, D205, D400
+    # - docstrings rules that should not be applied to examples
+	examples/*/*: D205, D400
 # For PEP8 error codes see
 # http://pep8.readthedocs.org/en/latest/intro.html#error-codes
+# D105: missing docstring in magic method
+# D107: missing docstring in __init__
 # E402: module level import not at top of file
 # W503: line break before binary operator
 # W504: line break after binary operator
-ignore=E402, W503, W504, W605
-max-line-length = 79
+ignore = D105, D107, E402, W503, W504, W605
 # E203: whitespace before ':'
 # for compatibility with black
 # https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#flake8
