--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,13 +13,7 @@ repos:
       - id: check-merge-conflict
       - id: check-yaml
       - id: end-of-file-fixer
-      - id: trailing-whitespace
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
-    hooks:
-      - id: isort
-        args: ["--profile", "black", "--filter-files"]      
+      - id: trailing-whitespace    
 
   - repo: https://github.com/psf/black
     rev: 23.1.0
@@ -32,6 +26,12 @@ repos:
     hooks:
       - id: flake8
         args: [--config=setup.cfg, --verbose]
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--profile", "black"]  
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.2
