--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,5 @@ include = 'nilearn/de.*'
 
 [tool.isort]
 profile = "black"
-src_paths= ['nilearn/de.*']
+src_paths = ['nilearn/de.*']
+line_length = 79
