[MAINT] start applying isort to organize imports (#3538)
* set up pre-commit hook for isort

* apply isort via precommit hook

* apply isort

* remove skip isort

* update config

* add github workflow

* update contributing

* have alias with other imports

* Update CONTRIBUTING.rst

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

---------

Co-authored-by: Yasmin <63292494+ymzayek@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
 [tool.black]
 line-length = 79
 include = "(nilearn/de.*)|(maint_tools/.*)|(setup.py)"
+
+[tool.isort]
+profile = "black"
+src_paths = ['nilearn/de.*']
+line_length = 79
+skip_gitignore = true
+combine_as_imports = true
