--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,13 @@ repos:
       - id: check-merge-conflict
       - id: check-yaml
       - id: end-of-file-fixer
-      - id: trailing-whitespace
+      - id: trailing-whitespace   
+
+  - repo: https://github.com/pycqa/isort
+    rev: 5.12.0
+    hooks:
+      - id: isort
+        args: ["--profile", "black"]   
 
   - repo: https://github.com/psf/black
     rev: 23.1.0
@@ -37,5 +43,5 @@ repos:
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
-    - id: pyupgrade
-      args: [--py36-plus]
+      - id: pyupgrade
+        args: [--py36-plus]
