--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,11 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 
-files: "(nilearn/de.*)|(.*binder/)|(.*circleci/)|(.*github/)|(maint_tools/.*)|(setup.*)|(.*coverage)|(.*toml$)|(.*in$)|(.*yml)|(.*yaml)|(CONTRIBUTING.rst)|(AUTHORS.rst)|(LICENSE)|(Makefile)|(.*gitignore)"
+files: "(nilearn/de.*)|(.*binder/)|(.*circleci/)|(.*github/)|(maint_tools/.*)|(setup.*)|(.*coverage)|(.*toml$)|(.*in$)|(.*yml)|(.*yaml)|(CONTRIBUTING.rst)|(AUTHORS.rst)|(LICENSE)|(Makefile)|(.*gitignore)|(nilearn/image/.*py)|(examples/.*py)"
+exclude: "^(nilearn/externals/tempita)|(examples/.*/.*(3d_map_to_surface_projection|demo_glass_brain|demo_glass_brain_extensive|demo_more_plotting|demo_plotting|surf_atlas|surf_stat_map|surface_projection_strategies|fiac_analysis|fixed_effects|localizer_surface_analysis|two_session_model|frem|searchlight_surface|compare_shrunk_connectome|group_level_connectivity|negate_image|resample_to_template|surface_bids_analysis).py)"
+
+
+
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -13,13 +17,13 @@ repos:
       - id: check-merge-conflict
       - id: check-yaml
       - id: end-of-file-fixer
-      - id: trailing-whitespace   
+      - id: trailing-whitespace
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
       - id: isort
-        args: ["--profile", "black"]   
+        args: ["--profile", "black"]
 
   - repo: https://github.com/psf/black
     rev: 23.1.0
