--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -36,4 +36,4 @@ jobs:
 
       - name: "Run Flake8 on whole file"
         shell: bash {0}
-        run: flake8 --config=setup.cfg --verbose nilearn/de*
+        run: flake8 --config=setup.cfg --verbose nilearn/de* maint_tools setup.py nilearn/image examples/00* examples/05*
