--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -29,4 +29,4 @@ jobs:
           python -m pip install --upgrade pip isort
 
       - name: "Run isort"
-        run: isort --diff --check --settings-path pyproject.toml nilearn/de*
+        run: isort --diff --check --settings-path pyproject.toml nilearn/de* maint_tools setup.py nilearn/image examples/00* examples/05*
