--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,15 @@
 [tool.black]
 line-length = 79
-include = "(nilearn/de.*)|(maint_tools/.*)|(setup.py)"
+include = "(maint_tools/.*py)|(setup.py)|(nilearn/dec.*)|(nilearn/image/.*py)|(examples/.*py)"
+# 'extend-exclude' excludes files or directories in addition to the defaults
+extend-exclude = '''
+(
+  (nilearn/externals)|(examples/.*/.*(3d_map_to_surface_projection|demo_glass_brain|demo_glass_brain_extensive|demo_more_plotting|demo_plotting|surf_atlas|surf_stat_map|surface_projection_strategies|fiac_analysis|fixed_effects|localizer_surface_analysis|two_session_model|frem|searchlight_surface|compare_shrunk_connectome|group_level_connectivity|negate_image|resample_to_template|surface_bids_analysis).py)
+)
+'''
 
 [tool.isort]
 profile = "black"
-src_paths = ['nilearn/de.*']
 line_length = 79
 skip_gitignore = true
 combine_as_imports = true
