--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
 line-length = 79
-include = "(nilearn/de.*)|(maint_tools/.*)|(setup.py)"
+include = "(nilearn/(de.*)|image)|(maint_tools/.*)|(setup.py)"
 
 [tool.isort]
 profile = "black"
