--- a/setup.cfg
+++ b/setup.cfg
@@ -97,7 +97,9 @@ per-file-ignores =
 # D107: missing docstring in __init__
 # E402: module level import not at top of file
 # W503: line break before binary operator
-# W504: line break after binary operator
+    # - docstrings rules that should not be applied to doc
+	# F401: module imported but unused
+	doc/*: D100, D103, F401
 ignore = D105, D107, E402, W503, W504, W605
 # E203: whitespace before ':'
 # for compatibility with black
