--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,12 @@ doc =
 	coverage
 	flake8
 	flake8-docstrings
+	pandas-stubs
+	types-requests
+	types-setuptools
+	types-docutils
+	types-tqdm
+	mypy
 	black
 	furo
 	memory_profiler  # measuring memory during docs building
@@ -114,5 +120,5 @@ addopts =
 	--durations=0
 
 [codespell]
-skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv
+skip = ./.git,plotly-gl3d-latest.min.js,jquery.min.js,localizer_behavioural.tsv,env,.mypy_cache
 ignore-words = .github/codespell_ignore_words.txt
