--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  black:
+  isort:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
