--- a/setup.cfg
+++ b/setup.cfg
@@ -80,6 +80,7 @@ exclude =
 docstring-convention = numpy
 max-line-length = 79
 max_complexity = 43
+max_function_length = 50
 # For PEP8 error codes see
 # http://pep8.readthedocs.org/en/latest/intro.html#error-codes
 	# D100, D103, D104: missing docstring
