--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.black]
 line-length = 79
-include = "(nilearn/de.*)|(maint_tools/.*)|(setup.py)|(nilearn/image.*py)"
+include = "(nilearn/de.*)|(maint_tools/.*)|(setup.py)|(nilearn/image.*py)|(nilearn/_utils/tests/test_data_gen.*py)"
 
 [tool.isort]
 profile = "black"
