--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,9 @@ doc/themes/nilearn/static/jquery.js
 examples/**/*.pdf
 examples/**/results/
 examples/results/
+
+# test related
+fmri_run0.nii
+fmri_run1.nii
+dmtx_0.csv
+dmtx_1.csv
