--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,62 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 
-files: "(nilearn/de.*)|(.*binder/)|(.*circleci/)|(.*github/)|(maint_tools/.*)|(setup.*)|(.*coverage)|(.*toml$)|(.*in$)|(.*yml)|(.*yaml)|(CONTRIBUTING.rst)|(AUTHORS.rst)|(LICENSE)|(Makefile)|(.*gitignore)|(doc/.*)|(nilearn/connectome/.*py)|(nilearn/image|regions|mass_univariate/.*py)|(examples/.*py)"
-exclude: "^(doc/whats_new.rst)|(doc/changes/(names|latest|0\\.9\\.[0-2]|0\\.10\\.0).rst)|(doc/(glm/first_level_model\\.rst|introduction\\.rst|maintenance\\.rst|manipulating_images/input_output\\.rst|modules/datasets\\.rst|modules/reference\\.rst|references\\.bib|themes/nilearn/static/nature\\.css_t))|(nilearn/externals/tempita)|(examples/.*/.*(3d_map_to_surface_projection|demo_glass_brain|demo_glass_brain_extensive|demo_more_plotting|demo_plotting|surf_atlas|surf_stat_map|surface_projection_strategies|fiac_analysis|fixed_effects|localizer_surface_analysis|two_session_model|searchlight_surface|compare_shrunk_connectome|group_level_connectivity|negate_image|resample_to_template|surface_bids_analysis).py)"
+files: |
+    (?x)^(
+        .*binder
+        | .*circleci
+        | .*coverage
+        | .*github
+        | .*gitignore
+        | .*in
+        | .*toml
+        | .*yaml
+        | .*yml
+        | AUTHORS.rst
+        | CONTRIBUTING.rst
+        | LICENSE
+        | Makefile
+        | doc
+        | examples
+        | maint_tools
+        | setup.*
+        | nilearn/de.*
+        | nilearn/connectome/.*py
+        | nilearn/image/.*py
+        | nilearn/regions.*py
+        | nilearn/mass_univariate/.*py
+    )$
+
+exclude: |
+    (?x)^(
+        doc/changes/(names|latest|0\\.9\\.[0-2]|0\\.10\\.0).rst
+        | doc/glm/first_level_model\\.rst
+        | introduction\\.rst
+        | maintenance\\.rst
+        | manipulating_images/input_output\\.rst
+        | modules/datasets\\.rst
+        | references\\.bib
+        | themes/nilearn/static/nature\\.css_t
+        | examples/.*/.*3d_map_to_surface_projection.py
+        | examples/.*/.*demo_glass_brain.py
+        | examples/.*/.*demo_glass_brain_extensive.py
+        | examples/.*/.*demo_more_plotting.py
+        | examples/.*/.*demo_plotting.py
+        | examples/.*/.*fiac_analysis.py
+        | examples/.*/.*fixed_effects.py
+        | examples/.*/.*frem.py
+        | examples/.*/.*group_level_connectivity.py
+        | examples/.*/.*negate_image.py
+        | examples/.*/.*localizer_surface_analysis.py
+        | examples/.*/.*searchlight_surface.py
+        | examples/.*/.*resample_to_template.py
+        | examples/.*/.*surf_atlas.py
+        | examples/.*/.*surf_stat_map.py
+        | examples/.*/.*surface_bids_analysis.py
+        | examples/.*/.*surface_projection_strategies.py
+        | examples/.*/.*two_session_model.py
+        | nilearn/externals/tempita
+    )$
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
